--- a/src/index.css
+++ b/src/index.css
@@ -32,3 +32,32 @@ a {
   height: 100vh;
   flex: none;
 }
+
+.signin {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  z-index: 3;
+}
+
+.signin-panel-background {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 3;
+  top: 0px;
+}
+
+.signin-panel {
+  position: absolute;
+  width: 90vw;
+  height: 95vh;
+  background-color: darkgrey;
+  opacity: 0.9;
+  top: 2.5vh;
+  left: 5vw;  
+  border-radius: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
