--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,13 @@ a {
 }
 */
 
+.loading-spinner {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
 .image-gallery-image {
   /*text-align: center;*/
   display: flex;
@@ -64,10 +71,15 @@ a {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
 }
 
 .signin-panel-close {
   position: absolute;
   top: 10px;
   left: 10px;
+}
+
+.signin-google {
+  margin: 5px;
 }
