--- a/src/index.css
+++ b/src/index.css
@@ -35,6 +35,7 @@ a {
   justify-content: center;  
 }
 
+.image-gallery-slide canvas,
 .image-gallery-slide img {
   width: auto;
   height: 100vh;
@@ -102,8 +103,14 @@ a {
   position: absolute;
   top: 10px;
   left: 10px;
-  z-index: 3;
+  /*z-index: 3;*/
 }
+
+.averageColor-palette {
+  position: absolute;
+  bottom: 150px;
+  left: 10px;
+} 
 
 .swatch {
   display: block;
